--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,6 @@ dependencies {
 
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation group: 'com.android.support', name: 'appcompat-v7', version: '28.0.0'
-    implementation group: 'com.android.support', name: 'design', version: '28.0.0'
+    implementation group: 'androidx.appcompat', name: 'appcompat', version: '1.0.2'
+    implementation group: 'com.google.android.material', name: 'material', version: '1.0.0'
 }
