--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        manifestPlaceholders = [auth0Domain: "", auth0Scheme: "https"]
+        manifestPlaceholders = [auth0Domain: "", auth0Scheme: "https", 'appAuthRedirectScheme': 'net.tpky.demoapp.appauth']
     }
     compileOptions {
         sourceCompatibility 1.8
@@ -60,10 +60,9 @@ dependencies {
      */
     api 'com.tapkey.android:Tapkey.MobileLib:1.15.12.0'
 
-    implementation "com.auth0.android:auth0:1.14.1"
-
-
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation group: 'androidx.appcompat', name: 'appcompat', version: '1.0.2'
     implementation group: 'com.google.android.material', name: 'material', version: '1.0.0'
+
+    implementation 'net.openid:appauth:0.7.1'
 }
