Update sample app to Mobile SDK 2.x

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'idea'
 
+idea {
+    module {
+        downloadJavadoc = true
+    }
+}
 
 repositories {
-
-    /*
-     * Add local tapkey-sdk maven repository to repositories
-     */
-    maven {
-        url 'https://tapkey.pkgs.visualstudio.com/_packaging/Tapkey/maven/v1'
-        credentials {
-            username "AZURE_ARTIFACTS"
-            password System.getenv("AZURE_ARTIFACTS_ENV_ACCESS_TOKEN") ?: "${azureArtifactsGradleAccessToken}"
-        }
-    }
-
+    maven { url "https://maven.tapkey.com" }
 }
 
 android {
@@ -25,7 +20,9 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
+        vectorDrawables {
+            useSupportLibrary = true
+        }
         manifestPlaceholders = [auth0Domain: "", auth0Scheme: "https", 'appAuthRedirectScheme': 'net.tpky.demoapp.appauth']
     }
     compileOptions {
@@ -40,7 +37,6 @@ android {
     }
 }
 
-
 task copyLicence(type: Copy) {
     from '../third_party_licenses.txt'
     into'src/main/assets/'
@@ -53,16 +49,14 @@ tasks.withType(JavaCompile) {
 preBuild.dependsOn(copyLicence)
 
 dependencies {
-
-
     /*
      * Add Tapkey.MobileLib to dependencies
      */
-    api 'com.tapkey.android:Tapkey.MobileLib:1.15.12.0'
+    api 'com.tapkey.android:Tapkey.MobileLib:2.1.0.0-preview'
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation group: 'androidx.appcompat', name: 'appcompat', version: '1.0.2'
-    implementation group: 'com.google.android.material', name: 'material', version: '1.0.0'
-
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'com.android.volley:volley:1.1.1'
     implementation 'net.openid:appauth:0.7.1'
 }
